--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,11 +1,44 @@
-// ion-grid {
-//   border: 1px solid red
-// }
+ion-grid {
+    padding: 0;
+    height: 100%;
+}
 
-// ion-row {
-//   border: 1px solid green
-// }
+ion-row {
+    border: 1px solid green;
+}
 
-// ion-col {
-//   border: 1px solid blue
-// }
+ion-col {
+    border: 1px solid blue;
+    padding: 0;
+    height: 100%;
+}
+
+.section1 {
+    height: 100%;
+    background: url(/assets/images/autunno-finale.jpg);
+    background-size: cover;
+}
+
+.section2 {
+    height: 100%;
+    background-color: var(--ion-color-light);
+}
+
+.section3 {
+    height: 100%;
+    background-color: var(--ion-color-oranges);
+}
+
+.center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.title {
+    font-family: 'Rock Salt';
+    font-weight: 400;
+    font-size: 250%;
+
+    color: var(--ion-color-light);
+}
