--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -4,29 +4,13 @@ ion-grid {
 }
 
 ion-row {
-    border: 1px solid green;
+    // border: 1px solid green;
 }
 
 ion-col {
-    border: 1px solid blue;
+    // border: 1px solid blue;
     padding: 0;
     height: 100%;
-}
-
-.section1 {
-    height: 100%;
-    background: url(/assets/images/autunno-finale.jpg);
-    background-size: cover;
-}
-
-.section2 {
-    height: 100%;
-    background-color: var(--ion-color-light);
-}
-
-.section3 {
-    height: 100%;
-    background-color: var(--ion-color-oranges);
 }
 
 .center {
@@ -35,10 +19,82 @@ ion-col {
     justify-content: center;
 }
 
-.title {
+
+/*----------------------------------------------------------------
+    SECTION 1
+----------------------------------------------------------------*/
+
+.section1 {
+    height: 100%;
+    background: url(/assets/images/autunno-finale.jpg);
+    background-size: cover;
+}
+
+#title1 {
     font-family: 'Rock Salt';
     font-weight: 400;
     font-size: 250%;
+
+    color: var(--ion-color-light);
+}
+
+/*----------------------------------------------------------------
+    SECTION 2
+----------------------------------------------------------------*/
+
+.section2 {
+    height: 100%;
+    background-color: var(--ion-color-light);
+}
+
+#foto-section2 {
+    height: 100%;
+    background: url(/assets/images/inverno.jpg);
+    background-size: cover;
+}
+
+#title2 {
+    font-family: 'Quando';
+    font-weight: 300;
+    font-size: 200%;
+
+    color: var(--ion-color-orange);
+}
+
+#text2 {
+    font-family: 'Quando';
+    font-size: 80%;
+
+    color: var(--ion-color-orange-light);
+}
+
+/*----------------------------------------------------------------
+    SECTION 3
+----------------------------------------------------------------*/
+
+.section3 {
+    height: 100%;
+    background-color: var(--ion-color-orange);
+}
+
+#foto-section3 {
+    height: 100%;
+    background: url(/assets/images/croce.jpg);
+    background-size: cover;
+}
+
+#title3 {
+    font-family: 'Quando';
+    font-weight: 300;
+    font-size: 200%;
+
+
+    color: var(--ion-color-light);
+}
+
+#text3 {
+    font-family: 'Quando';
+    font-size: 80%;
 
     color: var(--ion-color-light);
 }
