--- a/src/global.scss
+++ b/src/global.scss
@@ -30,6 +30,11 @@
     src: url('/assets/fonts/RockSalt-Regular.ttf');
 }
 
+@font-face {
+    font-family: 'Quando'; //This is what we are going to call
+    src: url('/assets/fonts/Quando-Regular.ttf');
+}
+
 .ion-color-orange {
     --ion-color-base: var(--ion-color-orange);
     --ion-color-base-rgb: var(--ion-color-orange-rgb);
@@ -37,4 +42,22 @@
     --ion-color-contrast-rgb: var(--ion-color-orange-contrast-rgb);
     --ion-color-shade: var(--ion-color-orange-shade);
     --ion-color-tint: var(--ion-color-orange-tint);
+}
+
+.ion-color-orange-light {
+    --ion-color-base: var(--ion-color-orange-light);
+    --ion-color-base-rgb: var(--ion-color-orange-light-rgb);
+    --ion-color-contrast: var(--ion-color-orange-light-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-orange-light-contrast-rgb);
+    --ion-color-shade: var(--ion-color-orange-light-shade);
+    --ion-color-tint: var(--ion-color-orange-light-tint);
+}
+
+.ion-color-green-dark {
+    --ion-color-base: var(--ion-color-green-dark);
+    --ion-color-base-rgb: var(--ion-color-green-dark-rgb);
+    --ion-color-contrast: var(--ion-color-green-dark-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-green-dark-contrast-rgb);
+    --ion-color-shade: var(--ion-color-green-dark-shade);
+    --ion-color-tint: var(--ion-color-green-dark-tint);
 }
