--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -17,6 +17,12 @@ ion-col {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
+}
+
+.navbar {
+    color: var(--ion-color-light);
+    font-size: 150%;
 }
 
 
@@ -24,16 +30,25 @@ ion-col {
     SECTION 1
 ----------------------------------------------------------------*/
 
-.section1 {
+#section1 {
     height: 100%;
+    // background: url(/assets/images/autunno-finale.jpg);
+    // background-size: cover;
+}
+
+.parallax-image {
     background: url(/assets/images/autunno-finale.jpg);
+    height: 100%;
+    width: 100%;
     background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 #title1 {
     font-family: 'Rock Salt';
     font-weight: 400;
-    font-size: 250%;
+    font-size: 500%;
 
     color: var(--ion-color-light);
 }
@@ -42,7 +57,7 @@ ion-col {
     SECTION 2
 ----------------------------------------------------------------*/
 
-.section2 {
+#section2 {
     height: 100%;
     background-color: var(--ion-color-light);
 }
@@ -72,7 +87,7 @@ ion-col {
     SECTION 3
 ----------------------------------------------------------------*/
 
-.section3 {
+#section3 {
     height: 100%;
     background-color: var(--ion-color-orange);
 }
