--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -13,6 +13,7 @@ ion-col {
     height: 100%;
 }
 
+
 .center {
     display: flex;
     align-items: center;
@@ -32,17 +33,24 @@ ion-col {
 
 #section1 {
     height: 100%;
+
     // background: url(/assets/images/autunno-finale.jpg);
     // background-size: cover;
 }
 
 .parallax-image {
+    position: absolute;
+    border: 2px solid red;
+    --background: url(/assets/images/autunno-finale.jpg);
     background: url(/assets/images/autunno-finale.jpg);
     height: 100%;
     width: 100%;
+
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    // overflow: hidden;
+    // transform: translateY(100px);
 }
 
 #title1 {
