--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -14,19 +14,6 @@ ion-col {
 }
 
 
-.center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
-
-.navbar {
-    color: var(--ion-color-light);
-    font-size: 150%;
-}
-
-
 /*----------------------------------------------------------------
     SECTION 1
 ----------------------------------------------------------------*/
@@ -36,6 +23,15 @@ ion-col {
 
     // background: url(/assets/images/autunno-finale.jpg);
     // background-size: cover;
+}
+
+.image {
+    --background: url(/assets/images/autunno-finale.jpg) 0 0/100% 100% no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100vw;
 }
 
 .parallax-image {
@@ -121,3 +117,9 @@ ion-col {
 
     color: var(--ion-color-light);
 }
+
+// ion-content ion-header {
+//     position: initial;
+//     --background: transparent;
+//     background: transparent;
+// }
