--- a/src/global.scss
+++ b/src/global.scss
@@ -61,3 +61,22 @@
     --ion-color-shade: var(--ion-color-green-dark-shade);
     --ion-color-tint: var(--ion-color-green-dark-tint);
 }
+
+.center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+// ion-grid {
+//     border: 1px solid red
+// }
+
+// ion-row {
+//     border: 1px solid green
+// }
+
+// ion-col {
+//     border: 1px solid blue
+// }
