--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -18,7 +18,7 @@ ion-col {
     SECTION 1
 ----------------------------------------------------------------*/
 
-#section1 {
+#home {
     height: 100%;
 
     // background: url(/assets/images/autunno-finale.jpg);
@@ -61,12 +61,12 @@ ion-col {
     SECTION 2
 ----------------------------------------------------------------*/
 
-#section2 {
+#where {
     height: 100%;
     background-color: var(--ion-color-light);
 }
 
-#foto-section2 {
+#foto-where {
     height: 100%;
     background: url(/assets/images/inverno.jpg);
     background-size: cover;
@@ -91,12 +91,12 @@ ion-col {
     SECTION 3
 ----------------------------------------------------------------*/
 
-#section3 {
+#services {
     height: 100%;
     background-color: var(--ion-color-orange);
 }
 
-#foto-section3 {
+#foto-services {
     height: 100%;
     background: url(/assets/images/croce.jpg);
     background-size: cover;
