--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -9,7 +9,8 @@
       <ion-col size="12" class="center">
 
         <ion-text id="title1">
-          La Corteccia del Faggio
+          La Corteccia <br>
+          del Faggio
         </ion-text>
 
 
