--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -52,8 +52,7 @@ ion-col {
 #title1 {
     font-family: 'Rock Salt';
     font-weight: 400;
-    font-size: 500%;
-
+    font-size: 7vw;
     color: var(--ion-color-light);
 }
 
