--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <!-- <ion-menu *ngIf="!platform.is('desktop')" contentId="content" side="start" type="overlay">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Awesome avocado menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      Awesome avocado content
+    </ion-content>
+  </ion-menu> -->
+
+  <ion-router-outlet id="content"></ion-router-outlet>
 </ion-app>
