--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,15 +1,7 @@
-.center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
-
 .navbar {
     color: var(--ion-color-light);
-    font-size: 150%;
+    font-size: 2.2vw;
     font-family: "Quando";
-    text-transform: none;
 }
 
 ion-toolbar {
