--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -4,6 +4,11 @@
     font-family: "Quando";
 }
 
+ion-menu-button {
+    color: var(--ion-color-light);
+    ;
+}
+
 ion-toolbar {
     --background: transparent;
 }
