--- a/src/global.scss
+++ b/src/global.scss
@@ -77,6 +77,6 @@
 //     border: 1px solid green
 // }
 
-ion-col {
-    border: 1px solid blue
-}
+// ion-col {
+//     border: 1px solid blue
+// }
