--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     </ion-header>
     <ion-content>
       <ion-list [inset]="true">
-        <ion-item *ngFor="let page of pages" (click)="page.action()">
+        <ion-item *ngFor="let page of pages" button="true" detail="false" (click)="page.action(); hello()">
           <ion-label> {{ page.name }} </ion-label>
         </ion-item>
 
