--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <ion-app>
-  <ion-menu *ngIf="!platform.is('desktop')" contentId="content" side="start" type="overlay">
+  <ion-menu *ngIf="!platform.is('desktop')" contentId="mainContent" side="start" type="overlay">
     <ion-header class="ion-no-border">
       <ion-img src="/assets/icon/logo-black.svg" style=" height: 80px;">
       </ion-img>
     </ion-header>
     <ion-content>
       <ion-list [inset]="true">
-        <ion-item *ngFor="let page of pages" button="true" detail="false" (click)="page.action(); hello()">
+        <ion-item *ngFor="let page of pages" button="true" detail="false" (click)="page.action()">
           <ion-label> {{ page.name }} </ion-label>
         </ion-item>
 
@@ -14,5 +14,5 @@
     </ion-content>
   </ion-menu>
 
-  <ion-router-outlet id="content"></ion-router-outlet>
+  <ion-router-outlet id="mainContent"></ion-router-outlet>
 </ion-app>
