--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <ion-header [style.opacity]="opacity" mode="ios" class="ion-no-border">
-  <ion-toolbar>
+  <!-- <ion-toolbar>
     <ion-buttons *ngIf="!platform.is('desktop')" slot="start">
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
@@ -8,18 +8,47 @@
 
 
     <ion-grid *ngIf="platform.is('desktop')">
-      <ion-row class="center">
+      <ion-row>
 
         <ion-col>
-          <ion-img src="/assets/icon/logo-white.svg" style=" height: 80px; fill:white">
+          <ion-img src="/assets/icon/logo-white.svg" style=" height: 100px; fill:white">
           </ion-img>
         </ion-col>
 
-        <ion-col *ngFor="let page of pages" class="center">
+        <ion-col size="2" *ngFor="let page of pages" class="center">
 
           <ion-text class="navbar" (click)="page.action()">
             {{ page.name }}
           </ion-text>
+        </ion-col>
+
+      </ion-row>
+    </ion-grid>
+
+  </ion-toolbar> -->
+
+  <ion-toolbar>
+    <ion-buttons *ngIf="!platform.is('desktop')" slot="start">
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+    </ion-buttons>
+
+    <ion-grid *ngIf="platform.is('desktop')" style="padding-left: 5%; padding-right: 5%;">
+
+      <ion-row class="ion-align-items-center">
+        <ion-col size="2">
+          <img src="/assets/icon/logo-white.svg" class="logo ion-text-left">
+        </ion-col>
+
+        <ion-col size="10">
+          <div class="ion-text-right">
+            <ion-button *ngFor="let page of pages" [fill]="page.fill" [routerLink]="page.name" routerDirection="root"
+              routerLinkActive="active-link" class="link navButton">
+              {{page.name}}
+            </ion-button>
+
+          </div>
         </ion-col>
 
       </ion-row>
