--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,12 +1,23 @@
-.navbar {
-    color: var(--ion-color-light);
-    font-size: 2.2vw;
+.navButton {
+    font-size: 1.2em;
     font-family: "Quando";
+}
+
+.logo {
+    max-height: 80px;
+}
+
+.link {
+    --color: var(--ion-color-light);
+}
+
+.active-link {
+    --color: var(--ion-color-light);
 }
 
 ion-menu-button {
     color: var(--ion-color-light);
-    ;
+
 }
 
 ion-toolbar {
