--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -4,6 +4,7 @@ ion-grid {
 }
 
 ion-row {
+
     // border: 1px solid green;
 }
 
@@ -17,13 +18,6 @@ ion-col {
 /*----------------------------------------------------------------
     SECTION 1
 ----------------------------------------------------------------*/
-
-#home {
-    height: 100%;
-
-    // background: url(/assets/images/autunno-finale.jpg);
-    // background-size: cover;
-}
 
 .image {
     --background: url(/assets/images/autunno-finale.jpg) 0 0/100% 100% no-repeat;
@@ -49,12 +43,31 @@ ion-col {
     // transform: translateY(100px);
 }
 
-#title1 {
-    font-family: 'Rock Salt';
-    font-weight: 400;
-    font-size: 7vw;
-    color: var(--ion-color-light);
+.section {
+    height: 100%;
 }
+
+ion-card {
+    --background: transparent;
+    --color: var(--ion-color-light);
+    padding: 4vw;
+    border-radius: 10px;
+    border: 2px solid var(--ion-color-light);
+
+    ion-card-title {
+        color: var(--ion-color-light);
+        font-family: 'Rock Salt';
+        font-size: 4vw;
+    }
+
+    ion-card-subtitle {
+        color: var(--ion-color-light);
+        font-family: 'Quando';
+        font-size: 2vw;
+        padding-top: 2vw;
+    }
+}
+
 
 /*----------------------------------------------------------------
     SECTION 2
