--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -7,8 +7,9 @@
   <ion-grid>
     <ion-row class="section">
       <ion-col size="12" class="center">
+        <img *ngIf="!platform.is('desktop')" src="/assets/icon/logo-white.svg" style="max-width: 80vw;" />
 
-        <ion-card class="home-card">
+        <ion-card *ngIf="platform.is('desktop')" class="home-card">
           <ion-card-header>
             <ion-card-title class="title"> La Corteccia del Faggio</ion-card-title>
             <ion-card-subtitle>La tua villaggiatura salcazzi</ion-card-subtitle>
@@ -52,7 +53,7 @@
                     <br>
                     <br>
 
-                    <ion-button (click)="onClick()" fill="outline" shape="round" color="green-dark" style="margin: 0;">
+                    <ion-button fill="outline" shape="round" color="green-dark" style="margin: 0;">
                       Prenota ora!
                     </ion-button>
                   </ion-col>
